Fixed next link getting clipped off in mobile view.

--- a/src/sass/rx/_partials/_va-pagination.scss
+++ b/src/sass/rx/_partials/_va-pagination.scss
@@ -32,7 +32,6 @@
 
   &-inner {
     line-height: 1.5;
-    overflow: hidden;
     max-width: 66%;
     white-space: nowrap;
 
